- Update deployment api to deploy custom objects

--- a/notebooks/train.ipynb
+++ b/notebooks/train.ipynb
@@ -364,19 +364,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "seldondeployment.machinelearning.seldon.io/wines-classifier configured\n"
+      "seldondeployment.machinelearning.seldon.io/wines-classifier unchanged\n"
      ]
     }
    ],
    "source": [
-    "!kubectl apply -f seldon-deployment.yaml"
+    "!kubectl apply -f seldon-deployment.yaml -n stage"
    ]
   },
   {
@@ -400,7 +400,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
