test github storage

--- a/notebooks/Prefect ETL example (1).ipynb
+++ b/notebooks/Prefect ETL example (1).ipynb
@@ -267,6 +267,108 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from prefect.storage import Local\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from wine_classifier.pipelines.deployment_pipeline import deploy_model\n",
+    "from wine_classifier import config"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from prefect import Parameter, Flow\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "custom_confs = {\n",
+    "    \"storage\": Local(\n",
+    "        directory=\"storage\",\n",
+    "        path=\"/Users/admin/Datarevenue/mlops/wine_classifier/wine_classifier/flows/flow_registrar.py\",\n",
+    "        stored_as_script=True,\n",
+    "    ),\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with Flow(\"model-deployment-pipeline\", **custom_confs,) as flow:\n",
+    "    model_uri = Parameter(\"model_uri\", default=config[\"model\"][\"modelUri\"])\n",
+    "    environment = Parameter(\"environment\", default=config[\"model\"][\"environment\"])\n",
+    "\n",
+    "    deploy_model(model_uri=model_uri, namespace=environment)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/admin/miniconda3/lib/python3.7/site-packages/prefect/client/client.py:783: UserWarning: A flow with the same name is already contained in storage; if you changed your Flow since the last build, you might experience unexpected issues and should re-create your storage object.\n",
+      "  serialized_flow = flow.serialize(build=build)  # type: Any\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Result check: OK\n",
+      "Flow URL: http://localhost:8080/default/flow/acd01d9b-a703-4b25-ac7f-bd7d0189b1f5\n",
+      " └── ID: e4e215bc-3093-43d2-aa1e-bff1cea7a0bf\n",
+      " └── Project: mlops-demo\n",
+      " └── Labels: ['datarevenue']\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'e4e215bc-3093-43d2-aa1e-bff1cea7a0bf'"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "flow.register(project_name=\"mlops-demo\")"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
